<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clickable="true"
    android:background="@color/app_bg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:src="@drawable/app_icon_large"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="@dimen/text_size_20"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/about_tv_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_version"
                android:textSize="@dimen/text_size_16"
                android:textColor="@android:color/black"/>

        </LinearLayout>

    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/item_margin_horizontal"
        android:paddingRight="@dimen/item_margin_horizontal"
        android:paddingTop="@dimen/item_title_margin_bottom"
        android:paddingBottom="@dimen/item_title_margin_top"
        android:text="@string/disclaimer"
        android:textSize="@dimen/item_text_title"
        android:textColor="@color/text_disable"/>

</LinearLayout>
